src/python/veda.py


lib.vedaArgsCreate.restype			= ctypes.c_int
lib.vedaArgsDestroy.restype			= ctypes.c_int
lib.vedaArgsSetF32.restype			= ctypes.c_int
lib.vedaArgsSetF64.restype			= ctypes.c_int
lib.vedaArgsSetI16.restype			= ctypes.c_int
lib.vedaArgsSetI32.restype			= ctypes.c_int
lib.vedaArgsSetI64.restype			= ctypes.c_int
lib.vedaArgsSetI8.restype			= ctypes.c_int
lib.vedaArgsSetPtr.restype			= ctypes.c_int
lib.vedaArgsSetVPtr.restype			= ctypes.c_int
lib.vedaArgsSetHMEM.restype			= ctypes.c_int
lib.vedaArgsSetStack.restype			= ctypes.c_int
lib.vedaArgsSetU16.restype			= ctypes.c_int
lib.vedaArgsSetU32.restype			= ctypes.c_int
lib.vedaArgsSetU64.restype			= ctypes.c_int
lib.vedaArgsSetU8.restype			= ctypes.c_int
lib.vedaCtxCreate.restype			= ctypes.c_int
lib.vedaCtxDestroy.restype			= ctypes.c_int
lib.vedaCtxGet.restype				= ctypes.c_int
lib.vedaCtxGetApiVersion.restype		= ctypes.c_int
lib.vedaCtxGetCurrent.restype			= ctypes.c_int
lib.vedaCtxGetDevice.restype			= ctypes.c_int
lib.vedaCtxPopCurrent.restype			= ctypes.c_int
lib.vedaCtxPushCurrent.restype			= ctypes.c_int
lib.vedaCtxSetCurrent.restype			= ctypes.c_int
lib.vedaCtxStreamCnt.restype			= ctypes.c_int
lib.vedaCtxSynchronize.restype			= ctypes.c_int
lib.vedaDeviceDistance.restype			= ctypes.c_int
lib.vedaDeviceGet.restype			= ctypes.c_int
lib.vedaDeviceGetAttribute.restype		= ctypes.c_int
lib.vedaDeviceGetCount.restype			= ctypes.c_int
lib.vedaDeviceGetName.restype			= ctypes.c_int
lib.vedaDeviceGetPower.restype			= ctypes.c_int
lib.vedaDeviceGetTemp.restype			= ctypes.c_int
lib.vedaDevicePrimaryCtxGetState.restype	= ctypes.c_int
lib.vedaDevicePrimaryCtxRelease.restype		= ctypes.c_int
lib.vedaDevicePrimaryCtxReset.restype		= ctypes.c_int
lib.vedaDevicePrimaryCtxRetain.restype		= ctypes.c_int
lib.vedaDevicePrimaryCtxSetFlags.restype	= ctypes.c_int
lib.vedaDeviceTotalMem.restype			= ctypes.c_int
lib.vedaDriverGetVersion.restype		= ctypes.c_int
lib.vedaExit.restype				= ctypes.c_int
lib.vedaGetErrorName.restype			= ctypes.c_int
lib.vedaGetErrorString.restype			= ctypes.c_int
lib.vedaGetVersion.restype			= ctypes.c_int
lib.vedaInit.restype				= ctypes.c_int
lib.vedaLaunchKernel.restype			= ctypes.c_int
lib.vedaLaunchKernelEx.restype			= ctypes.c_int
lib.vedaMemAlloc.restype			= ctypes.c_int
lib.vedaMemAllocAsync.restype			= ctypes.c_int
lib.vedaMemAllocHost.restype			= ctypes.c_int
lib.vedaMemAllocPitch.restype			= ctypes.c_int
lib.vedaMemAllocPitchAsync.restype		= ctypes.c_int
lib.vedaMemFree.restype				= ctypes.c_int
lib.vedaMemFreeAsync.restype			= ctypes.c_int
lib.vedaMemFreeHost.restype			= ctypes.c_int
lib.vedaMemGetAddressRange.restype		= ctypes.c_int
lib.vedaMemGetDevice.restype			= ctypes.c_int
lib.vedaMemGetInfo.restype			= ctypes.c_int
lib.vedaMemGetRawPointer.restype		= ctypes.c_int
lib.vedaMemGetHMEMPointer.restype		= ctypes.c_int
lib.vedaMemReport.restype			= ctypes.c_int
lib.vedaMemcpy.restype				= ctypes.c_int
lib.vedaMemcpyAsync.restype			= ctypes.c_int
lib.vedaMemcpyDtoD.restype			= ctypes.c_int
lib.vedaMemcpyDtoDAsync.restype			= ctypes.c_int
lib.vedaMemcpyDtoH.restype			= ctypes.c_int
lib.vedaMemcpyDtoHAsync.restype			= ctypes.c_int
lib.vedaMemcpyHtoD.restype			= ctypes.c_int
lib.vedaMemcpyHtoDAsync.restype			= ctypes.c_int
lib.vedaMemsetD16.restype			= ctypes.c_int
lib.vedaMemsetD16Async.restype			= ctypes.c_int
lib.vedaMemsetD2D16.restype			= ctypes.c_int
lib.vedaMemsetD2D16Async.restype		= ctypes.c_int
lib.vedaMemsetD2D32.restype			= ctypes.c_int
lib.vedaMemsetD2D32Async.restype		= ctypes.c_int
lib.vedaMemsetD2D8.restype			= ctypes.c_int
lib.vedaMemsetD2D8Async.restype			= ctypes.c_int
lib.vedaMemsetD32.restype			= ctypes.c_int
lib.vedaMemsetD32Async.restype			= ctypes.c_int
lib.vedaMemsetD64.restype			= ctypes.c_int
lib.vedaMemsetD64Async.restype			= ctypes.c_int
lib.vedaMemsetD8.restype			= ctypes.c_int
lib.vedaMemsetD8Async.restype			= ctypes.c_int
lib.vedaModuleGetFunction.restype		= ctypes.c_int
lib.vedaModuleLoad.restype			= ctypes.c_int
lib.vedaModuleUnload.restype			= ctypes.c_int
lib.vedaStreamGetFlags.restype			= ctypes.c_int
lib.vedaStreamQuery.restype			= ctypes.c_int
lib.vedaStreamSynchronize.restype		= ctypes.c_int

#-------------------------------------------------------------------------------
def check(err):
	if err != 0:
		name = ctypes.c_char_p()
		msg  = ctypes.c_char_p()
		lib.vedaGetErrorName(err, ctypes.byref(name))
		lib.vedaGetErrorString(err, ctypes.byref(msg))
		raise Exception('[VEDA#{}] {}: {}'.format(err, name, msg))

#-------------------------------------------------------------------------------
check(lib.vedaInit(0))

#-------------------------------------------------------------------------------
def check_stream(stream):
	assert stream is None or isinstance(stream, int)

#-------------------------------------------------------------------------------
def get_size(array):
	if isinstance(array, VPtr):
		return array.size()
	elif isinstance(array, np.ndarray):
		return array.nbytes
	else:
		raise Exception('[VEDA] unknown pointer type {}'.format(type(array)))

#-------------------------------------------------------------------------------
def get_ptr(array):
	if isinstance(array, np.ndarray): 
		return ctypes.c_void_p(array.__array_interface__['data'][0])
	elif isinstance(array, VPtr):
		return array.ptr()
	else:
		raise Exception('[VEDA] unknown pointer type {}'.format(type(array)))

#-------------------------------------------------------------------------------
def check_copy(A, B, bytes):
	assert bytes is None or isinstance(bytes, int)
	if bytes is None:
		bytes = get_size(A)
	assert bytes > 0
	assert bytes <= get_size(A)
	assert bytes <= get_size(B)
	return bytes

#-------------------------------------------------------------------------------
def copy(dst, src, stream=None, bytes=None):
	check_stream(stream)
	bytes	= check_copy(dst, src, bytes)
	dst_ptr = get_ptr(dst)
	src_ptr = get_ptr(src)

	if isinstance(dst, VPtr):
		if isinstance(src, VPtr):
			check(lib.vedaMemCpyDtoD(dst_ptr, src_ptr, bytes) if stream is None else lib.vedaMemcpyDtoDAsync(dst_ptr, src_ptr, bytes, stream))
		else:
			check(lib.vedaMemCpyHtoD(dst_ptr, src_ptr, bytes) if stream is None else lib.vedaMemcpyHtoDAsync(dst_ptr, src_ptr, bytes, stream))
	else:
		assert isinstance(src, VPtr)
		check(lib.vedaMemCpyDtoH(dst_ptr, src_ptr, bytes) if stream is None else lib.vedaMemcpyDtoHAsync(dst_ptr, src_ptr, bytes, stream))

#-------------------------------------------------------------------------------
class VBuffer:
	def __init__(self, ptr, size):
		assert isinstance(ptr, ctypes.c_void_p)
		assert isinstance(size, ctypes.c_ulonglong)
		self.m_ptr	= ptr
		self.m_size	= size

	def __del__(self):
		check(lib.vedaMemFree(self.m_ptr))

	def ptr(self):
		return self.m_ptr

	def size(self):
		if self.m_size.value == 0:
			base = ctypes.c_void_p()
			check(lib.vedaMemGetAddressRange(ctypes.byref(base), ctypes.byref(self.m_size), self.ptr()))
		return self.m_size.value

#-------------------------------------------------------------------------------
class VPtr:
	def __init__(self, buf, offset=0):
		assert isinstance(buf, VBuffer)
		self.m_buf	= buf
		self.m_offset	= offset
	
	def __repr__(self):
		str = "<VEDAdeviceptr 0x%016x/%uB>" % (self.ptr().value, self.size())
		return str

	def __add__(self, offset):
		return VPtr(self.buf(), self.offset() + offset)

	def __sub__(self, offset):
		return VPtr(self.buf(), self.offset() - offset)

	def __iadd__(self, offset):
		self.m_offset += offset
		assert self.m_offset >= 0
		assert self.m_offset < 0x1FFFFFFFFF

	def __isub__(self, offset):
		self.m_offset -= offset
		assert self.m_offset >= 0
		assert self.m_offset < 0x1FFFFFFFFF

	def buf(self):
		return self.m_buf

	def size(self):
		return self.buf().size()

	def offset(self):
		return self.m_offset

	def ptr(self):
		return ctypes.c_void_p(self.buf().ptr().value + self.offset())

	def to(self, dst, stream=0, bytes=None):
		copy(self, dst, stream, bytes)

	def __ilshift__(self, src): # dst <<= src, synchronous
		copy(self, src)

	def __irshift__(self, dst): # src >>= dst, synchronous
		copy(dst, self)

	def __lshift__(self, src): # dst << src, asynchronous
		copy(self, src, stream=0)

	def __rshift__(self, dst): # src >> dst, asynchronous
		copy(dst, self, stream=0)

	def to_numpy(self, stream=None):
		dst = np.empty(self.size(), dtype=np.byte)
		self.to(dst, stream=stream)

	def memset(self, value, stream=None, cnt=None):
		check_stream(stream)

		if isinstance(value, (np.byte, np.ubyte)):
			bytes = check_copy(self, self, None if cnt is None else cnt * 1) // 1
			check(lib.vedaMemsetD8(self.ptr(), value, bytes)) if stream is None else check(lib.vedaMemsetD8(self.ptr(), value, bytes))
		elif isinstance(value, (np.short, np.ushort)):
			bytes = check_copy(self, self, None if cnt is None else cnt * 2) // 2
			check(lib.vedaMemsetD16(self.ptr(), value, bytes)) if stream is None else check(lib.vedaMemsetD16(self.ptr(), value, bytes))
		elif isinstance(value, (np.float32, np.intc, np.uint, np.int_, np.uintc, np.single)):
			bytes = check_copy(self, self, None if cnt is None else cnt * 4) // 4
			check(lib.vedaMemsetD32(self.ptr(), value, bytes)) if stream is None else check(lib.vedaMemsetD32(self.ptr(), value, bytes))
		elif isinstance(value, (float, np.float64, np.longlong, np.ulonglong, np.double)):
			bytes = check_copy(self, self, None if cnt is None else cnt * 8) // 8
			check(lib.vedaMemsetD64(self.ptr(), value, bytes)) if stream is None else check(lib.vedaMemsetD64(self.ptr(), value, bytes))
		else:
			raise Exception('[VEDA] unknown data type {}'.format(type(value)))

#-------------------------------------------------------------------------------
class Function:
	def __init__(self, mod, name):
		assert isinstance(name, str)
		self.m_mod	= mod
		self.m_name	= name
		self.m_func	= ctypes.c_void_p()
		cname		= name.encode('UTF-8')

		self.m_mod.m_device.__set_current()
		check(lib.vedaModuleGetFunction(ctypes.byref(self.m_func), self.m_mod.m_lib, cname))

	def __call__(self, *args, stream=None):
		vargs = ctypes.c_void_p
		check(lib.vedaArgsCreate(ctypes.byref(vargs)))

		for i, a in enumerate(args):
			if isinstance(a, (int, ctypes.c_longlong)):
				check(lib.vedaArgsSetI64(vargs, i, a))
			elif isinstance(a, (int, ctypes.c_ulonglong, ctypes.c_void_p)):
				check(lib.vedaArgsSetU64(vargs, i, a))
			elif isinstance(a, (float, ctypes.c_double)):
				check(lib.vedaArgsSetF64(vargs, i, a))
			elif isinstance(a, ctypes.c_float):
				check(lib.vedaArgsSetF32(vargs, i, a))
			elif isinstance(a, ctypes.c_char, ctypes.c_byte):
				check(lib.vedaArgsSetI8(vargs, i, a))
			elif isinstance(a, ctypes.c_ubyte):
				check(lib.vedaArgsSetU8(vargs, i, a))
			elif isinstance(a, ctypes.c_short):
				check(lib.vedaArgsSetI16(vargs, i, a))
			elif isinstance(a, ctypes.c_ushort):
				check(lib.vedaArgsSetU16(vargs, i, a))
			elif isinstance(a, ctypes.c_int):
				check(lib.vedaArgsSetI32(vargs, i, a))
			elif isinstance(a, ctypes.c_uint):
				check(lib.vedaArgsSetU32(vargs, i, a))
			else:
				raise Exception('[VEDA] can\'t launch kernel with argument of type: {}'.format(type(a)))

#-------------------------------------------------------------------------------
class Module:
	def __init__(self, device, name):
		assert isinstance(device, Device)
		assert isinstance(name, str)
		self.m_lib	= ctypes.c_void_p()
		self.m_device	= device
		self.m_name	= name
		cname		= name.encode('UTF-8')

		self.m_device.__set_current()
		check(lib.vedaModuleLoad(ctypes.byref(self.m_lib), cname))

	def __del__(self):
		self.m_device.__set_current()
		check(lib.vedaModuleUnload(self.m_lib))

	def get(self, name):
		return Function(self, name)

#-------------------------------------------------------------------------------
class Device:
	def __init__(self, device_id):
		self.m_ctx		= ctypes.c_void_p()
		self.m_device_id	= device_id
		check(lib.vedaCtxCreate(ctypes.byref(self.m_ctx), 0, device_id))

	def __del__(self):
		check(lib.vedaCtxDestroy(self.m_ctx))
